<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.palladiosimulator.blockchainsystems</groupId>
    <artifactId>parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.palladiosimulator</groupId>
        <artifactId>eclipse-parent-updatesite</artifactId>
        <version>0.8.10</version>
    </parent>

    <repositories>
        <repository>
            <id>eclipse-platform</id>
            <url>https://download.eclipse.org/releases/2025-06</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>palladio-simulator</id>
            <url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>mavenCentral</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <properties>
        <java.version>17</java.version>
        <kotlin.version>2.1.21</kotlin.version>
        <maven.version>3.14.0</maven.version>
        <tycho.version>4.0.13</tycho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.code.style>official</kotlin.code.style>
        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
        <dokka.version>2.0.0</dokka.version>
        <org.palladiosimulator.maven.tychotprefresh.tplocation.2>
            ${project.basedir}/releng/org.palladiosimulator.blockchainsystems.target_platform/tp.target
        </org.palladiosimulator.maven.tychotprefresh.tplocation.2>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <sourceDirs>
                                    <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                                    <sourceDir>${project.basedir}/src/main/java</sourceDir>
                                </sourceDirs>
                            </configuration>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>process-test-sources</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                            <configuration>
                                <sourceDirs>
                                    <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                                    <sourceDir>${project.basedir}/src/test/java</sourceDir>
                                </sourceDirs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.jetbrains.dokka</groupId>
                    <artifactId>dokka-maven-plugin</artifactId>
                    <version>${dokka.version}</version>
                    <executions>
                        <execution>
                            <phase>pre-site</phase>
                            <goals>
                                <goal>dokka</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <sourceDirectories>
                            <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                            <sourceDir>${project.basedir}/src/main/java</sourceDir>
                        </sourceDirectories>
                        <documentedVisibilities>
                            <visibility>PUBLIC</visibility>
                            <visibility>PRIVATE</visibility>
                            <visibility>PROTECTED</visibility>
                            <visibility>INTERNAL</visibility>
                            <visibility>PACKAGE</visibility>
                        </documentedVisibilities>
                        <includes>
                            <include>README.md</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>releng</module>
        <module>org.palladiosimulator.blockchainsystems.threesim_feature</module>
        <module>org.palladiosimulator.blockchainsystems.core</module>
        <module>org.palladiosimulator.blockchainsystems.loggers</module>
        <module>org.palladiosimulator.blockchainsystems.bscm</module>
        <module>org.palladiosimulator.blockchainsystems.bscm.edit</module>
        <module>org.palladiosimulator.blockchainsystems.bscm.editor</module>
        <module>org.palladiosimulator.blockchainsystems.plugin</module>
        <module>org.palladiosimulator.blockchainsystems.threesim</module>
        <module>org.palladiosimulator.blockchainsystems.threesim_plugin</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <version>2.1.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
